// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should attach simple properties 1`] = `
Object {
  "birthday": "",
  "cellPhone": "",
  "email": "",
  "firstName": "Max",
  "formattedName": "",
  "gender": "",
  "getFormattedString": [Function],
  "getMajorVersion": [Function],
  "homeAddress": Object {
    "city": "",
    "countryRegion": "",
    "label": "",
    "postalCode": "",
    "stateProvince": "",
    "street": "",
  },
  "homeFax": "",
  "homePhone": "",
  "lastName": "Stoiber",
  "logo": Object {
    "attachFromUrl": [Function],
    "base64": false,
    "embedFromFile": [Function],
    "embedFromString": [Function],
    "mediaType": "",
    "url": "",
  },
  "middleName": "",
  "namePrefix": "",
  "nameSuffix": "",
  "nickname": "",
  "note": "",
  "organization": "",
  "pagerPhone": "",
  "photo": Object {
    "attachFromUrl": [Function],
    "base64": false,
    "embedFromFile": [Function],
    "embedFromString": [Function],
    "mediaType": "",
    "url": "",
  },
  "role": "",
  "saveToFile": [Function],
  "socialUrls": Object {
    "facebook": "",
    "flickr": "",
    "linkedIn": "",
    "twitter": "",
  },
  "source": "",
  "title": "",
  "uid": "",
  "url": "",
  "version": "3.0",
  "workAddress": Object {
    "city": "",
    "countryRegion": "",
    "label": "",
    "postalCode": "",
    "stateProvince": "",
    "street": "",
  },
  "workEmail": "",
  "workFax": "",
  "workPhone": "",
  "workUrl": "",
}
`;

exports[`should convert the vCard to a string 1`] = `
"BEGIN:VCARD
VERSION:3.0
FN;CHARSET=UTF-8:Max Stoiber
N;CHARSET=UTF-8:Stoiber;Max;;;

END:VCARD
"
`;

exports[`should correct attach photo URLs 1`] = `
Object {
  "birthday": "",
  "cellPhone": "",
  "email": "",
  "firstName": "",
  "formattedName": "",
  "gender": "",
  "getFormattedString": [Function],
  "getMajorVersion": [Function],
  "homeAddress": Object {
    "city": "",
    "countryRegion": "",
    "label": "",
    "postalCode": "",
    "stateProvince": "",
    "street": "",
  },
  "homeFax": "",
  "homePhone": "",
  "lastName": "",
  "logo": Object {
    "attachFromUrl": [Function],
    "base64": false,
    "embedFromFile": [Function],
    "embedFromString": [Function],
    "mediaType": "",
    "url": "",
  },
  "middleName": "",
  "namePrefix": "",
  "nameSuffix": "",
  "nickname": "",
  "note": "",
  "organization": "",
  "pagerPhone": "",
  "photo": Object {
    "attachFromUrl": [Function],
    "base64": false,
    "embedFromFile": [Function],
    "embedFromString": [Function],
    "mediaType": undefined,
    "url": "https://mxstbr.com/headshot.jpeg",
  },
  "role": "",
  "saveToFile": [Function],
  "socialUrls": Object {
    "facebook": "",
    "flickr": "",
    "linkedIn": "",
    "twitter": "",
  },
  "source": "",
  "title": "",
  "uid": "",
  "url": "",
  "version": "3.0",
  "workAddress": Object {
    "city": "",
    "countryRegion": "",
    "label": "",
    "postalCode": "",
    "stateProvince": "",
    "street": "",
  },
  "workEmail": "",
  "workFax": "",
  "workPhone": "",
  "workUrl": "",
}
`;

exports[`should create a vcard-js 1`] = `
Object {
  "birthday": "",
  "cellPhone": "",
  "email": "",
  "firstName": "",
  "formattedName": "",
  "gender": "",
  "getFormattedString": [Function],
  "getMajorVersion": [Function],
  "homeAddress": Object {
    "city": "",
    "countryRegion": "",
    "label": "",
    "postalCode": "",
    "stateProvince": "",
    "street": "",
  },
  "homeFax": "",
  "homePhone": "",
  "lastName": "",
  "logo": Object {
    "attachFromUrl": [Function],
    "base64": false,
    "embedFromFile": [Function],
    "embedFromString": [Function],
    "mediaType": "",
    "url": "",
  },
  "middleName": "",
  "namePrefix": "",
  "nameSuffix": "",
  "nickname": "",
  "note": "",
  "organization": "",
  "pagerPhone": "",
  "photo": Object {
    "attachFromUrl": [Function],
    "base64": false,
    "embedFromFile": [Function],
    "embedFromString": [Function],
    "mediaType": "",
    "url": "",
  },
  "role": "",
  "saveToFile": [Function],
  "socialUrls": Object {
    "facebook": "",
    "flickr": "",
    "linkedIn": "",
    "twitter": "",
  },
  "source": "",
  "title": "",
  "uid": "",
  "url": "",
  "version": "3.0",
  "workAddress": Object {
    "city": "",
    "countryRegion": "",
    "label": "",
    "postalCode": "",
    "stateProvince": "",
    "street": "",
  },
  "workEmail": "",
  "workFax": "",
  "workPhone": "",
  "workUrl": "",
}
`;
